--- a/Angular-15_MicroFrontend_eCommerce_Starter/tsconfig.json
+++ b/Angular-15_MicroFrontend_eCommerce_Starter/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "auth-lib": [
+        "dist/auth-lib"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
