--- a/Angular-15_MicroFrontend_eCommerce_Starter/tsconfig.json
+++ b/Angular-15_MicroFrontend_eCommerce_Starter/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "auth-lib": [
+      "@auth-lib": [
         "projects/auth-lib/src/public-api.ts"
       ]
     },
